--- a/72089-h/72089-h.htm
+++ b/72089-h/72089-h.htm
@@ -9313,7 +9313,7 @@ to talk to her.
 </p>
 
 <p>
-Freda left the room obediently, but went on further away than the
+Freda left the room obediently, but went no further away than the
 great window-seat on the landing outside. Here she curled herself up,
 trying to keep warm, and looked out on the moonlit stretch of country.
 She was full of disquieting thoughts. This man, who had been kind to
@@ -9584,7 +9584,7 @@ suggested.
 said: ‘Don’t let her know who I am; I shan’t.’ ‘<i>I</i> shan’t say
 anything, sir, you may be sure,’ I said. And with that I walked back
 to my kitchen, and he let you in, and you took him for Crispin, as you
-know. And ever since then he’s been in too minds, now making believe
+know. And ever since then he’s been in two minds, now making believe
 to be dead, so that he might get away quietly, and now bent on staying
 here, whatever happened.”
 </p>
